[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Magic/pergamena.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/Bar.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Characters/Player.gd" type="Script" id=3]
[ext_resource path="res://SpriteFrames/Monkey1.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Assets/UI/life_bar.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/ammo_bar.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/ammo.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/life.png" type="Texture" id=8]
[ext_resource path="res://Shaders/Outline.gdshader" type="Shader" id=9]
[ext_resource path="res://Scripts/Magic/Pergamena.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Magic/Smoke.gd" type="Script" id=11]
[ext_resource path="res://Assets/Magic/smoke.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Characters/LabelState.gd" type="Script" id=13]
[ext_resource path="res://Fonts/PressStart2P.ttf" type="DynamicFontData" id=14]

[sub_resource type="CircleShape2D" id=12]
radius = 17.0

[sub_resource type="ShaderMaterial" id=22]
shader = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 3, 2 )

[sub_resource type="Gradient" id=25]
offsets = PoolRealArray( 0.448087, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 25 )

[sub_resource type="Curve" id=27]
max_value = 1.6
_data = [ Vector2( 0, 1.6 ), 0.0, 0.0, 0, 0, Vector2( 0.228155, 1.6 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.42 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=28]
curve = SubResource( 27 )

[sub_resource type="ParticlesMaterial" id=24]
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, -10, 0 )
initial_velocity = 8.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 28 )
color = Color( 2, 2, 2, 1 )
color_ramp = SubResource( 26 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 38, 33 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 38, 0, 38, 33 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 76, 0, 38, 33 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 12 )
region = Rect2( 114, 0, 38, 33 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 12 )
region = Rect2( 152, 0, 38, 33 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 12 )
region = Rect2( 190, 0, 38, 33 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 228, 0, 38, 33 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 30 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=32]
size = 8
font_data = ExtResource( 14 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 336, 367 )
collision_mask = 56
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=["area_player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 22 )
frames = ExtResource( 4 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.75, 2.88 )
shape = SubResource( 29 )

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2( -2, 16 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 32

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2( 6, 16 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 32

[node name="RayCastUpLeft" type="RayCast2D" parent="."]
position = Vector2( -6, -11 )
enabled = true
cast_to = Vector2( 0, -1 )
collision_mask = 32

[node name="RayCastUpRight" type="RayCast2D" parent="."]
position = Vector2( 3, -11 )
enabled = true
cast_to = Vector2( 0, -1 )
collision_mask = 32

[node name="TweenColor" type="Tween" parent="."]

[node name="WeaponPosition" type="Position2D" parent="."]
position = Vector2( 0, 1 )
__meta__ = {
"_gizmo_extents_": 5.0
}

[node name="UI" type="Node2D" parent="."]
position = Vector2( 0, -17 )

[node name="LifeBar" type="Sprite" parent="UI"]
position = Vector2( 0, -19 )
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Life" type="Sprite" parent="UI/LifeBar"]
position = Vector2( -16, 0 )
scale = Vector2( 32, 1 )
texture = ExtResource( 8 )
offset = Vector2( 0.5, 0 )

[node name="AmmoBar" type="Sprite" parent="UI"]
position = Vector2( 0, -6 )
texture = ExtResource( 6 )
script = ExtResource( 2 )

[node name="Ammo" type="Sprite" parent="UI/AmmoBar"]
position = Vector2( -16, 0 )
scale = Vector2( 32, 1 )
texture = ExtResource( 7 )
offset = Vector2( 0.5, 0 )

[node name="Pergamena" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 1 )
z_index = 2
texture = ExtResource( 1 )
script = ExtResource( 10 )

[node name="Particles" type="Particles2D" parent="Pergamena"]
position = Vector2( -31, -1 )
visibility_rect = Rect2( -10, -10, 20, 18 )
local_coords = false
process_material = SubResource( 24 )

[node name="Smoke" type="AnimatedSprite" parent="."]
z_index = 10
frames = SubResource( 31 )
frame = 6
playing = true
script = ExtResource( 11 )

[node name="TweenSize" type="Tween" parent="."]

[node name="LabelState" type="Label" parent="."]
margin_left = 14.0
margin_top = -13.0
margin_right = 54.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 32 )
text = "state"
script = ExtResource( 13 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
